--- a/traefik/dynamic.yml
+++ b/traefik/dynamic.yml
@@ -11,6 +11,4 @@ http:
       loadBalancer:
         servers:
           - url: "http://cobanov-white:5000"
-          - url: "http://machine2_ip:5000"
-          - url: "http://machine3_ip:5000"
-          - url: "http://machine4_ip:5000"
+          - url: "http://dgx4:5002"
